log
Fri 09 Sep 2022 12:20:51 PM UTC: 
 tests:  0|6
total_score: 0/70
65edf6b
Fri 09 Sep 2022 12:39:13 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d36b933
